Add themes, fig ligatures, add rainbow delimiters, add org babel typescript support and rust

--- a/emacs-configuration.org
+++ b/emacs-configuration.org
@@ -189,21 +189,24 @@ Here, I add some basic emacs setup like loading the language, disabling the tool
    I tend to like *doom-themes* package. Below we will install doom theme. In addition, I will also install a package called *heaven-and-hell*. This allows us to toggle between two themes using a shortcut key. I will assign ~F6~ key to toggling the theme and ~C-c F6~ to set to default theme.
 
 #+BEGIN_SRC emacs-lisp
-(use-package doom-themes
-:ensure t 
-:init 
-(load-theme 'doom-palenight t))
+  (use-package doom-themes
+	:ensure t 
+	:init 
+	(load-theme 'doom-palenight t))
 
-(use-package heaven-and-hell
-  :ensure t
-  :init
-  (setq heaven-and-hell-theme-type 'dark)
-  (setq heaven-and-hell-themes
-        '((light . doom-acario-light)
-          (dark . doom-palenight)))
-  :hook (after-init . heaven-and-hell-init-hook)
-  :bind (("C-c <f6>" . heaven-and-hell-load-default-theme)
-         ("<f6>" . heaven-and-hell-toggle-theme)))
+  (use-package solo-jazz-theme
+	:ensure t)
+
+  (use-package heaven-and-hell
+	:ensure t
+	:init
+	(setq heaven-and-hell-theme-type 'dark)
+	(setq heaven-and-hell-themes
+		  '((light . solo-jazz)
+			(dark . doom-palenight)))
+	:hook (after-init . heaven-and-hell-init-hook)
+	:bind (("C-c <f6>" . heaven-and-hell-load-default-theme)
+		   ("<f6>" . heaven-and-hell-toggle-theme)))
 
 #+END_SRC
 
@@ -235,20 +238,65 @@ If you press F6 key in your keyboard, it should switch between doom-palenight an
 	;; Enable traditional ligature support in eww-mode, if the
 	;; `variable-pitch' face supports it
 	(ligature-set-ligatures 'eww-mode '("ff" "fi" "ffi"))
-	;; Enable all Cascadia Code ligatures in programming modes
-	(ligature-set-ligatures 'prog-mode '("|||>" "<|||" "<==>" "<!--" "####" "~~>" "***" "||=" "||>"
-										 ":::" "::=" "=:=" "===" "==>" "=!=" "=>>" "=<<" "=/=" "!=="
-										 "!!." ">=>" ">>=" ">>>" ">>-" ">->" "->>" "-->" "---" "-<<"
-										 "<~~" "<~>" "<*>" "<||" "<|>" "<$>" "<==" "<=>" "<=<" "<->"
-										 "<--" "<-<" "<<=" "<<-" "<<<" "<+>" "</>" "###" "#_(" "..<"
-										 "..." "+++" "/==" "///" "_|_" "www" "&&" "^=" "~~" "~@" "~="
-										 "~>" "~-" "**" "*>" "*/" "||" "|}" "|]" "|=" "|>" "|-" "{|"
-										 "[|" "]#" "::" ":=" ":>" ":<" "$>" "==" "=>" "!=" "!!" ">:"
-										 ">=" ">>" ">-" "-~" "-|" "->" "--" "-<" "<~" "<*" "<|" "<:"
-										 "<$" "<=" "<>" "<-" "<<" "<+" "</" "#{" "#[" "#:" "#=" "#!"
-										 "##" "#(" "#?" "#_" "%%" ".=" ".-" ".." ".?" "+>" "++" "?:"
-										 "?=" "?." "??" ";;" "/*" "/=" "/>" "//" "__" "~~" "(*" "*)"
-										 "\\\\" "://"))
+	;; Enable all Cascadia and Fira Code ligatures in programming modes
+	(ligature-set-ligatures 'prog-mode
+							'(;; == === ==== => =| =>>=>=|=>==>> ==< =/=//=// =~
+							  ;; =:= =!=
+							  ("=" (rx (+ (or ">" "<" "|" "/" "~" ":" "!" "="))))
+							  ;; ;; ;;;
+							  (";" (rx (+ ";")))
+							  ;; && &&&
+							  ("&" (rx (+ "&")))
+							  ;; !! !!! !. !: !!. != !== !~
+							  ("!" (rx (+ (or "=" "!" "\." ":" "~"))))
+							  ;; ?? ??? ?:  ?=  ?.
+							  ("?" (rx (or ":" "=" "\." (+ "?"))))
+							  ;; %% %%%
+							  ("%" (rx (+ "%")))
+							  ;; |> ||> |||> ||||> |] |} || ||| |-> ||-||
+							  ;; |->>-||-<<-| |- |== ||=||
+							  ;; |==>>==<<==<=>==//==/=!==:===>
+							  ("|" (rx (+ (or ">" "<" "|" "/" ":" "!" "}" "\]"
+											  "-" "=" ))))
+							  ;; \\ \\\ \/
+							  ("\\" (rx (or "/" (+ "\\"))))
+							  ;; ++ +++ ++++ +>
+							  ("+" (rx (or ">" (+ "+"))))
+							  ;; :: ::: :::: :> :< := :// ::=
+							  (":" (rx (or ">" "<" "=" "//" ":=" (+ ":"))))
+							  ;; // /// //// /\ /* /> /===:===!=//===>>==>==/
+							  ("/" (rx (+ (or ">"  "<" "|" "/" "\\" "\*" ":" "!"
+											  "="))))
+							  ;; .. ... .... .= .- .? ..= ..<
+							  ("\." (rx (or "=" "-" "\?" "\.=" "\.<" (+ "\."))))
+							  ;; -- --- ---- -~ -> ->> -| -|->-->>->--<<-|
+							  ("-" (rx (+ (or ">" "<" "|" "~" "-"))))
+							  ;; *> */ *)  ** *** ****
+							  ("*" (rx (or ">" "/" ")" (+ "*"))))
+							  ;; www wwww
+							  ("w" (rx (+ "w")))
+							  ;; <> <!-- <|> <: <~ <~> <~~ <+ <* <$ </  <+> <*>
+							  ;; <$> </> <|  <||  <||| <|||| <- <-| <-<<-|-> <->>
+							  ;; <<-> <= <=> <<==<<==>=|=>==/==//=!==:=>
+							  ;; << <<< <<<<
+							  ("<" (rx (+ (or "\+" "\*" "\$" "<" ">" ":" "~"  "!"
+											  "-"  "/" "|" "="))))
+							  ;; >: >- >>- >--|-> >>-|-> >= >== >>== >=|=:=>>
+							  ;; >> >>> >>>>
+							  (">" (rx (+ (or ">" "<" "|" "/" ":" "=" "-"))))
+							  ;; #: #= #! #( #? #[ #{ #_ #_( ## ### #####
+							  ("#" (rx (or ":" "=" "!" "(" "\?" "\[" "{" "_(" "_"
+										   (+ "#"))))
+							  ;; ~~ ~~~ ~=  ~-  ~@ ~> ~~>
+							  ("~" (rx (or ">" "=" "-" "@" "~>" (+ "~"))))
+							  ;; __ ___ ____ _|_ __|____|_
+							  ("_" (rx (+ (or "_" "|"))))
+							  ;; Fira code: 0xFF 0x12
+							  ;; ("0" (rx (and "x" (+ (in "A-F" "a-f" "0-9")))))
+							  ;; Fira code:
+							  ;; "Fl"  "Tl"  "fi"  "fj"  "fl"  "ft"
+							  ;; The few not covered by the regexps.
+							  "{|"  "[|"  "]#"  "(*"  "}#"  "$>"  "^="))
 	;; Enables ligature checks globally in all buffers. You can also do it
 	;; per mode with `ligature-mode'.
 	(global-ligature-mode t))
@@ -260,6 +308,14 @@ If you press F6 key in your keyboard, it should switch between doom-palenight an
   (use-package doom-modeline
   :ensure t
   :init (doom-modeline-mode))
+#+end_src
+
+** Rainbow delimiters
+
+#+begin_src emacs-lisp
+  (use-package rainbow-mode
+	:ensure t
+	:hook (prog-mode . rainbow-delimiters-mode))
 #+end_src
 
 * Custom Packages
@@ -395,6 +451,7 @@ We can use quickrun package to execute code (if it has main). E.g. If you have a
 A VC plugin that has github integrations
 #+begin_src emacs-lisp
   (use-package magit :ensure t)
+  (setenv "TERM" "dumb")
 #+end_src
 
 ** Envrc
@@ -723,7 +780,7 @@ Pakcages for other languages and hooks
 **** Astro
 
 #+begin_src emacs-lisp
-  (use-package astro-ts-mode :ensure t)
+  ;; (use-package astro-ts-mode :ensure t)
 #+end_src
 
 ** JavaScript
@@ -731,6 +788,21 @@ Pakcages for other languages and hooks
 #+begin_src emacs-lisp
   (add-hook 'js-mode-hook 'lsp)
 #+end_src
+
+*** Typescript
+
+#+begin_src emacs-lisp
+  (use-package ob-typescript
+	:ensure t)
+
+  (org-babel-do-load-languages
+   'org-babel-load-languages
+   '((typescript . t)
+	 ))
+
+  (setq org-babel-command:typescript "npx -p typescript -- tsc")
+#+end_src
+
 
 Adding better ~JSON~ mode
 
@@ -783,6 +855,10 @@ Adding better ~JSON~ mode
 
 #+begin_src emacs-lisp
   (use-package rust-mode :ensure t :hook (rust-mode . cargo-minor-mode))
+  (use-package flycheck-rust
+	:ensure t)
+  (with-eval-after-load 'rust-mode
+	(add-hook 'flycheck-mode-hook #'flycheck-rust-setup))
 #+end_src
 
 ** GDScript
