--- a/emacs-configuration.org
+++ b/emacs-configuration.org
@@ -696,6 +696,18 @@ Add skewer mode for a live server
 	(require 'org-roam-protocol))
 #+end_src
 
+** Eshell syntax highlight
+
+#+begin_src emacs-lisp
+  (use-package eshell-syntax-highlighting
+    :after eshell-mode
+    :ensure t ;; Install if not already installed.
+    :config
+    ;; Enable in all Eshell buffers.
+    (eshell-syntax-highlighting-global-mode +1))
+#+end_src
+
+
 * Language Server Protocol (LSP)
   With above setup done, below we will setup several packages closely related to LSP.
 
