--- a/emacs-configuration.org
+++ b/emacs-configuration.org
@@ -208,8 +208,11 @@ Here, I add some basic emacs setup like loading the language, disabling the tool
 ** Font
 
 #+begin_src emacs-lisp 
-(set-face-attribute 'default nil :font "CaskaydiaCove Nerd Font-10")
-(set-frame-font "CaskaydiaCove Nerd Font-10" nil t)
+  ;; (set-face-attribute 'default nil :font "CaskaydiaCove Nerd Font-10")
+  ;; (set-frame-font "CaskaydiaCove Nerd Font-10" nil t)
+  (setq default-frame-alist '((font . "CaskaydiaCove Nerd Font-10")
+  							(width . 80)
+  							(height. 24)))
 #+end_src
 
 ** Theme
@@ -793,27 +796,28 @@ Emacs Debug Adapter Protocol aka DAP Mode allows us to debug your program. Below
 Treemacs provides UI elements used for LSP UI. Let's install lsp-treemacs and its dependency treemacs. We will also Assign ~M-9~ to show error list.
 #+begin_src emacs-lisp
   (use-package lsp-treemacs
-	:after (lsp-mode treemacs)
-	:ensure t
-	:commands lsp-treemacs-errors-list
-	:bind (:map lsp-mode-map
-		   ("M-9" . lsp-treemacs-errors-list)))
+  	:after (lsp-mode treemacs)
+  	:ensure t
+  	:commands lsp-treemacs-errors-list
+  	:init (lsp-treemacs-sync-mode 1)
+  	:bind (:map lsp-mode-map
+  		   ("M-9" . lsp-treemacs-errors-list)))
   (use-package treemacs-projectile
-	:ensure t
-	:after (treemacs))
+  	:ensure t
+  	:after (treemacs))
 
   (use-package treemacs-magit
-	:ensure t
-	:after (treemacs))
+  	:ensure t
+  	:after (treemacs))
 
   (use-package treemacs-all-the-icons
-	:ensure t
-	:after (treemacs))
+  	:ensure t
+  	:after (treemacs))
 
   (use-package treemacs
-	:ensure t
-	:commands (treemacs)
-	:after (lsp-mode))
+  	:ensure t
+  	:commands (treemacs)
+  	:after (lsp-mode))
 #+end_src
 
 ** LSP UI
@@ -893,6 +897,81 @@ This is the package that handles server installation and session management.
   (require 'dap-java)
 #+end_src
 
+* Tree sitter
+
+With frameworks like react, tsx and jsx files need tree sitter for incremental parsing.
+
+#+begin_src emacs-lisp 
+  (use-package treesit
+        :mode (("\\.tsx\\'" . tsx-ts-mode)
+               ("\\.js\\'"  . typescript-ts-mode)
+               ("\\.mjs\\'" . typescript-ts-mode)
+               ("\\.mts\\'" . typescript-ts-mode)
+               ("\\.cjs\\'" . typescript-ts-mode)
+               ("\\.ts\\'"  . typescript-ts-mode)
+               ("\\.jsx\\'" . tsx-ts-mode)
+               ("\\.json\\'" .  json-ts-mode)
+               ("\\.Dockerfile\\'" . dockerfile-ts-mode)
+               ("\\.prisma\\'" . prisma-ts-mode)
+               ;; More modes defined here...
+               )
+        :preface
+        (defun os/setup-install-grammars ()
+          "Install Tree-sitter grammars if they are absent."
+          (interactive)
+          (dolist (grammar
+                   '((css . ("https://github.com/tree-sitter/tree-sitter-css" "v0.20.0"))
+                     (bash "https://github.com/tree-sitter/tree-sitter-bash")
+                     (html . ("https://github.com/tree-sitter/tree-sitter-html" "v0.20.1"))
+                     (javascript . ("https://github.com/tree-sitter/tree-sitter-javascript" "v0.21.2" "src"))
+                     (json . ("https://github.com/tree-sitter/tree-sitter-json" "v0.20.2"))
+                     (python . ("https://github.com/tree-sitter/tree-sitter-python" "v0.20.4"))
+                     (go "https://github.com/tree-sitter/tree-sitter-go" "v0.20.0")
+                     (markdown "https://github.com/ikatyang/tree-sitter-markdown")
+                     (make "https://github.com/alemuller/tree-sitter-make")
+                     (elisp "https://github.com/Wilfred/tree-sitter-elisp")
+                     (cmake "https://github.com/uyha/tree-sitter-cmake")
+                     (c "https://github.com/tree-sitter/tree-sitter-c")
+                     (cpp "https://github.com/tree-sitter/tree-sitter-cpp")
+                     (toml "https://github.com/tree-sitter/tree-sitter-toml")
+                     (tsx . ("https://github.com/tree-sitter/tree-sitter-typescript" "v0.20.3" "tsx/src"))
+                     (typescript . ("https://github.com/tree-sitter/tree-sitter-typescript" "v0.20.3" "typescript/src"))
+                     (yaml . ("https://github.com/ikatyang/tree-sitter-yaml" "v0.5.0"))
+                     (prisma "https://github.com/victorhqc/tree-sitter-prisma")))
+            (add-to-list 'treesit-language-source-alist grammar)
+            ;; Only install `grammar' if we don't already have it
+            ;; installed. However, if you want to *update* a grammar then
+            ;; this obviously prevents that from happening.
+            (unless (treesit-language-available-p (car grammar))
+              (treesit-install-language-grammar (car grammar)))))
+
+        ;; Optional, but recommended. Tree-sitter enabled major modes are
+        ;; distinct from their ordinary counterparts.
+        ;;
+        ;; You can remap major modes with `major-mode-remap-alist'. Note
+        ;; that this does *not* extend to hooks! Make sure you migrate them
+        ;; also
+        (dolist (mapping
+                 '((python-mode . python-ts-mode)
+                   (css-mode . css-ts-mode)
+                   (typescript-mode . typescript-ts-mode)
+                   (js-mode . typescript-ts-mode)
+                   (js2-mode . typescript-ts-mode)
+                   (c-mode . c-ts-mode)
+                   (c++-mode . c++-ts-mode)
+                   (c-or-c++-mode . c-or-c++-ts-mode)
+                   (bash-mode . bash-ts-mode)
+                   (css-mode . css-ts-mode)
+                   (json-mode . json-ts-mode)
+                   (js-json-mode . json-ts-mode)
+                   (sh-mode . bash-ts-mode)
+                   (sh-base-mode . bash-ts-mode)))
+          (add-to-list 'major-mode-remap-alist mapping))
+        :config
+        (os/setup-install-grammars))
+
+#+end_src
+
 * Other languages
 Pakcages for other languages and hooks
 
@@ -921,6 +1000,12 @@ Pakcages for other languages and hooks
   (setq auto-mode-alist
         (append '((".*\\.astro\\'" . astro-mode))
                 auto-mode-alist))
+#+end_src
+
+*** Web-mode
+
+#+begin_src emacs-lisp 
+  (setq web-mode-enable-engine-detection t)
 #+end_src
 
 ** JavaScript
@@ -966,8 +1051,8 @@ Adding better ~JSON~ mode
 ** CSS
 
 #+begin_src emacs-lisp
-  (add-hook 'scss-mode-hook
-			(lambda () ((skewer-reload-stylesheets-reload-on-save)(skewer-reload-stylesheets-start-editing))))
+  ;; (add-hook 'scss-mode-hook
+  ;; 			(lambda () ((skewer-reload-stylesheets-reload-on-save)(skewer-reload-stylesheets-start-editing))))
 #+end_src
 
 ** Lisp
@@ -979,18 +1064,21 @@ Adding better ~JSON~ mode
   (setq inferior-lisp-program "sbcl")
   (add-hook 'common-lisp-hook 'company-mode)
 
+  (load "~/quicklisp/log4sly-setup.el")
+  (global-log4sly-mode 1)
+
   (use-package paredit :ensure t)
 
   (add-hook 'lisp-mode-hook
-  		  (lambda ()
-  			(paredit-mode t)
-  			(turn-on-eldoc-mode)
-  			(eldoc-add-command
-  			 'paredit-backward-delete
-  			 'paredit-close-round)
-  			(local-set-key (kbd "RET") 'electrify-return-if-match)
-  			(eldoc-add-command 'electrify-return-if-match)
-  			(show-paren-mode t)))
+    		  (lambda ()
+    			(paredit-mode t)
+    			(turn-on-eldoc-mode)
+    			(eldoc-add-command
+    			 'paredit-backward-delete
+    			 'paredit-close-round)
+    			(local-set-key (kbd "RET") 'electrify-return-if-match)
+    			(eldoc-add-command 'electrify-return-if-match)
+    			(show-paren-mode t)))
 #+end_src
 
 *** Scheme
@@ -1000,6 +1088,13 @@ Adding better ~JSON~ mode
 #+begin_src emacs-lisp
   (use-package geiser-guile :ensure t)
   (use-package ac-geiser :ensure t)  
+#+end_src
+
+*** Clojure
+
+#+begin_src emacs-lisp 
+  (use-package cider
+    :ensure t)
 #+end_src
 
 ** Latex
@@ -1034,12 +1129,21 @@ Adding better ~JSON~ mode
 ** Rust
 
 #+begin_src emacs-lisp
-  (use-package rust-mode :ensure t :hook ((rust-mode . cargo-minor-mode)
-										  (rust-mode . lsp)))
+  (use-package cargo-mode
+    :ensure t)
+
+  (use-package cargo-transient
+    :ensure t)
+
+  (use-package rust-mode
+    :ensure t
+    :hook ((rust-mode . cargo-minor-mode)
+  		 (rust-mode . lsp)))
   (use-package flycheck-rust
-	:ensure t)
+    :ensure t)
+
   (with-eval-after-load 'rust-mode
-	(add-hook 'flycheck-mode-hook #'flycheck-rust-setup))
+    (add-hook 'flycheck-mode-hook #'flycheck-rust-setup))
 #+end_src
 
 ** GDScript
@@ -1051,11 +1155,12 @@ Adding better ~JSON~ mode
 ** C/C++
 
 #+begin_src emacs-lisp
-  ;; (use-package ccls
-  ;;   :hook ((c-mode c++-mode objc-mode cuda-mode) .
-  ;;          (lambda () (require 'ccls) (lsp))))
+  (use-package ccls
+    ;; :hook ((c-mode c++-mode objc-mode cuda-mode) .
+    ;;        (lambda () (require 'ccls) (lsp)))
+    )
 
-  (setq lsp-disabled-clients '(ccls))
+  ;; (setq lsp-disabled-clients '(ccls))
 
   (require 'dap-lldb)
   (require 'dap-cpptools)
@@ -1072,7 +1177,8 @@ Adding better ~JSON~ mode
 
 #+begin_src emacs-lisp 
   (use-package php-mode
-    :ensure t)
+    :ensure t
+    :hook (php-mode . lsp-deferred))
   ;;(setq lsp-enabled-clients '(phpactor))
 #+end_src
 
